--- a/class_2.ipynb
+++ b/class_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -14,7 +14,8 @@
     }
    ],
    "source": [
-    "print(\"hello\")\n"
+    "print(\"hello\")\n",
+    "import pandas as pd"
    ]
   }
  ],
