--- a/class_1.ipynb
+++ b/class_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/Users/xinyuanliang/Desktop/messy_data.csv\")"
+    "df = pd.read_csv(\"/Users/xinyuanliang/Desktop/MBAN 6110/messy_data.csv\")"
    ]
   },
   {
