--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -37,6 +37,109 @@
     "df=pd.read_csv(\"/Users/xinyuanliang/Desktop/sales_data.csv\")\n",
     "df.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Units Sold</th>\n",
+       "      <th>Sale Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Region_1</td>\n",
+       "      <td>72.87</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Product_40</td>\n",
+       "      <td>Region_2</td>\n",
+       "      <td>46.19</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2022-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Product_1</td>\n",
+       "      <td>Region_5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Product_6</td>\n",
+       "      <td>Region_8</td>\n",
+       "      <td>143.47</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2022-01-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Product_44</td>\n",
+       "      <td>Region_4</td>\n",
+       "      <td>122.54</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2022-01-05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Product    Region   Price  Units Sold   Sale Date\n",
+       "0         NaN  Region_1   72.87        10.0  2022-01-01\n",
+       "1  Product_40  Region_2   46.19        10.0  2022-01-02\n",
+       "2   Product_1  Region_5     NaN         4.0  2022-01-03\n",
+       "3   Product_6  Region_8  143.47         8.0  2022-01-04\n",
+       "4  Product_44  Region_4  122.54        10.0  2022-01-05"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
