--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,26 +112,71 @@
        "      <td>10.0</td>\n",
        "      <td>2022-01-05</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Product_21</td>\n",
+       "      <td>Region_8</td>\n",
+       "      <td>15.76</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2022-01-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Product_31</td>\n",
+       "      <td>Region_10</td>\n",
+       "      <td>1.60</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2022-01-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2022-01-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Product_20</td>\n",
+       "      <td>Region_8</td>\n",
+       "      <td>9.55</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2022-01-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Product_34</td>\n",
+       "      <td>Region_1</td>\n",
+       "      <td>58.88</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-01-10</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Product    Region   Price  Units Sold   Sale Date\n",
-       "0         NaN  Region_1   72.87        10.0  2022-01-01\n",
-       "1  Product_40  Region_2   46.19        10.0  2022-01-02\n",
-       "2   Product_1  Region_5     NaN         4.0  2022-01-03\n",
-       "3   Product_6  Region_8  143.47         8.0  2022-01-04\n",
-       "4  Product_44  Region_4  122.54        10.0  2022-01-05"
+       "      Product     Region   Price  Units Sold   Sale Date\n",
+       "0         NaN   Region_1   72.87        10.0  2022-01-01\n",
+       "1  Product_40   Region_2   46.19        10.0  2022-01-02\n",
+       "2   Product_1   Region_5     NaN         4.0  2022-01-03\n",
+       "3   Product_6   Region_8  143.47         8.0  2022-01-04\n",
+       "4  Product_44   Region_4  122.54        10.0  2022-01-05\n",
+       "5  Product_21   Region_8   15.76        20.0  2022-01-06\n",
+       "6  Product_31  Region_10    1.60        11.0  2022-01-07\n",
+       "7         NaN        NaN     NaN        11.0  2022-01-08\n",
+       "8  Product_20   Region_8    9.55         8.0  2022-01-09\n",
+       "9  Product_34   Region_1   58.88         NaN  2022-01-10"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(10)"
    ]
   },
   {
