--- a/C2_messy_data_cleaning.ipynb
+++ b/C2_messy_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "[105 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "4   25  53173.80518  Female       D         2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "Name: Income, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "Name: Income, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "Name: Age, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "Name: Income, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
        "Male    52807.321410  63330.314347  300000.00000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "max     120.000000  300000.000000     NaN     NaN    5.00000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "<Axes: xlabel='Income', ylabel='Count'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "max    120.000000  300000.000000    5.00000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
        "99   61  300000.0   Male       B         4"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
        "<Axes: xlabel='Income', ylabel='Count'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
        "<Axes: xlabel='Gender', ylabel='Income'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +980,7 @@
        "<Axes: xlabel='Product', ylabel='Income'>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1029,16 +1029,17 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 104 entries, 59544.57663 to 69554.91903\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column    Non-Null Count  Dtype \n",
-      "---  ------    --------------  ----- \n",
-      " 0   Age       104 non-null    int64 \n",
-      " 1   Gender    104 non-null    object\n",
-      " 2   Product   99 non-null     object\n",
-      " 3   Quantity  104 non-null    int64 \n",
-      "dtypes: int64(2), object(2)\n",
-      "memory usage: 4.1+ KB\n"
+      "Index: 99 entries, 0 to 98\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   Income    89 non-null     float64\n",
+      " 1   Age       99 non-null     int64  \n",
+      " 2   Gender    99 non-null     object \n",
+      " 3   Product   94 non-null     object \n",
+      " 4   Quantity  99 non-null     int64  \n",
+      "dtypes: float64(1), int64(2), object(2)\n",
+      "memory usage: 4.6+ KB\n"
      ]
     }
    ],
@@ -1049,19 +1050,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Gender\n",
-       "Female    46567.28726\n",
-       "Male      48783.21569\n",
+       "Female    48320.18269\n",
+       "Male      50656.55325\n",
        "Name: Income, dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1108,13 +1109,13 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.series.Series'>\n",
-      "RangeIndex: 96 entries, 0 to 95\n",
+      "Index: 99 entries, 0 to 98\n",
       "Series name: Income\n",
       "Non-Null Count  Dtype  \n",
       "--------------  -----  \n",
-      "96 non-null     float64\n",
+      "99 non-null     float64\n",
       "dtypes: float64(1)\n",
-      "memory usage: 900.0 bytes\n"
+      "memory usage: 1.5 KB\n"
      ]
     }
    ],
@@ -1125,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1133,17 +1134,17 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 96 entries, 0 to 95\n",
+      "Index: 99 entries, 0 to 98\n",
       "Data columns (total 5 columns):\n",
       " #   Column    Non-Null Count  Dtype  \n",
       "---  ------    --------------  -----  \n",
-      " 0   Income    96 non-null     float64\n",
-      " 1   Age       96 non-null     int64  \n",
-      " 2   Gender    96 non-null     object \n",
-      " 3   Product   91 non-null     object \n",
-      " 4   Quantity  96 non-null     int64  \n",
+      " 0   Income    99 non-null     float64\n",
+      " 1   Age       99 non-null     int64  \n",
+      " 2   Gender    99 non-null     object \n",
+      " 3   Product   94 non-null     object \n",
+      " 4   Quantity  99 non-null     int64  \n",
       "dtypes: float64(1), int64(2), object(2)\n",
-      "memory usage: 3.9+ KB\n"
+      "memory usage: 4.6+ KB\n"
      ]
     }
    ],
@@ -1153,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
