--- a/class4/Assignment_2.ipynb
+++ b/class4/Assignment_2.ipynb
@@ -997,7 +997,7 @@
     "\n",
     "H0 : The mean of time spent for Variant A = the mean of time spent for Variant B.\n",
     "\n",
-    "H1 : The mean of time spent for Variant A ≠ to the mean of time spent for Variant A."
+    "H1 : The mean of time spent for Variant A ≠ to the mean of time spent for Variant B."
    ]
   },
   {
@@ -1142,7 +1142,7 @@
     "\n",
     "H0 : The mean of CTR for Variant A = the mean of CTR for Variant B.\n",
     "\n",
-    "H1 : The mean of CTR for Variant B ≠ the mean of CTR for Variant B."
+    "H1 : The mean of CTR for Variant A ≠ the mean of CTR for Variant B."
    ]
   },
   {
@@ -1315,13 +1315,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The roll-out plan needs to ensure a smooth transition and minimize potential risks and disruptions. Regular communication with the development team, stakeholders and audiences throughout the rollout process is critical.\n",
+    "The rollout plan needs to ensure a smooth transition and minimize potential risks and disruptions. Regular communication with the development team, stakeholders and audiences is critical throughout the rollout process, and the rollout plan can include a phased implementation strategy that\n",
     "\n",
-    "The rollout plan can include a phased implementation strategy, starting with a small target group to gather initial feedback and evaluate impact. This initial phase helps validate statistical results and provides the opportunity to optimize functionality based on user response.\n",
+    "5%: Start with a small target group, gather initial feedback and evaluate impact. Continue for a specified duration, usually one week. This initial phase will be used as a pilot test to gather initial feedback and assess the impact on key metrics such as CTR (click-through rate) and time spent.\n",
     "\n",
-    "If the initial phase is successful, the application can be gradually rolled out to a larger audience, carefully monitoring key performance indicators and user feedback. This iterative process allows for adjustments and optimizations to improve the user experience and maximize the utility of the functionality.\n",
+    "10%-25%-50%: If the initial phase is successful, the application can be gradually rolled out to a larger audience, carefully monitoring key performance metrics and user feedback, and continuing to expand the usability of the feature to a larger audience over the next few weeks, an iterative process that allows for adjustments and optimizations to improve the user experience and maximize the utility of the feature.\n",
     "\n",
-    "Following a structured roll-out plan that includes ongoing monitoring, integration of feedback, and effective communication will ensure a positive user experience that maximizes the potential benefits to both the user and the business.The speed of deployment should be determined by factors such as complexity of functionality, technical feasibility and resource availability."
+    "Continue to incrementally increase the rollout coverage to reach a larger percentage of the audience based on the performance observed in the previous phases. This may involve rolling out the feature to 75% of the audience over a period of time, followed by a final phase of making the feature available to 100% of the audience.\n",
+    "\n",
+    "However, before considering full deployment to 100% of the audience, it is important to carefully analyze the data and feedback at each stage to ensure that the feature meets the desired goals and expectations.\n",
+    "\n",
+    "Throughout the rollout process, key metrics such as CTR and Time Spent are closely monitored to assess the impact of the feature on user engagement. Compare these metrics between different rollout phases to identify any changes or trends. It is important to establish clear benchmarks and performance goals to evaluate the success of each phase and make data-driven decisions for further expansion. The speed of deployment should be determined by factors such as complexity of functionality, technical feasibility, and resource availability."
    ]
   }
  ],
