--- a/class_5/in_class.ipynb
+++ b/class_5/in_class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -242,19 +242,19 @@
        "[1000 rows x 10 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df=pd.read_csv('/Users/xinyuanliang/Desktop/module_5_feature_engineering_inclass.csv')\n",
+    "df=pd.read_csv('/Users/xinyuanliang/Desktop/MBAN 6110/module_5_feature_engineering_inclass.csv')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "4    yahoo.com  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -455,11 +455,11 @@
       " 3   last_purchase_date         1000 non-null   datetime64[ns]\n",
       " 4   total_purchases            1000 non-null   int64         \n",
       " 5   total_spent                1000 non-null   float64       \n",
-      " 6   favorite_product_category  1000 non-null   object        \n",
+      " 6   favorite_product_category  0 non-null      float64       \n",
       " 7   location                   1000 non-null   object        \n",
       " 8   gender                     1000 non-null   object        \n",
       " 9   email_domain               1000 non-null   object        \n",
-      "dtypes: datetime64[ns](2), float64(1), int64(3), object(4)\n",
+      "dtypes: datetime64[ns](2), float64(2), int64(3), object(3)\n",
       "memory usage: 78.2+ KB\n"
      ]
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "      <td>2020-05-11 04:13:00</td>\n",
        "      <td>10</td>\n",
        "      <td>840.954993</td>\n",
-       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Lake Gerald</td>\n",
        "      <td>female</td>\n",
        "      <td>gmail.com</td>\n",
@@ -528,7 +528,7 @@
        "      <td>1959-01-07 05:45:00</td>\n",
        "      <td>2</td>\n",
        "      <td>1147.412095</td>\n",
-       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>North Justinburgh</td>\n",
        "      <td>male</td>\n",
        "      <td>yahoo.com</td>\n",
@@ -541,7 +541,7 @@
        "      <td>2006-10-29 16:56:00</td>\n",
        "      <td>6</td>\n",
        "      <td>1301.284835</td>\n",
-       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>West Alec</td>\n",
        "      <td>female</td>\n",
        "      <td>yahoo.com</td>\n",
@@ -554,7 +554,7 @@
        "      <td>1966-07-01 20:22:00</td>\n",
        "      <td>8</td>\n",
        "      <td>1404.261405</td>\n",
-       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Annaton</td>\n",
        "      <td>male</td>\n",
        "      <td>hotmail.com</td>\n",
@@ -567,138 +567,39 @@
        "      <td>2013-05-14 12:44:00</td>\n",
        "      <td>3</td>\n",
        "      <td>1968.752964</td>\n",
-       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>East Markburgh</td>\n",
-       "      <td>female</td>\n",
-       "      <td>yahoo.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>996</td>\n",
-       "      <td>69</td>\n",
-       "      <td>1994-01-02 01:26:00</td>\n",
-       "      <td>2002-12-06 01:07:00</td>\n",
-       "      <td>48</td>\n",
-       "      <td>1395.669474</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Cynthiaborough</td>\n",
-       "      <td>female</td>\n",
-       "      <td>gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>996</th>\n",
-       "      <td>997</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1957-10-19 19:41:00</td>\n",
-       "      <td>1977-07-19 00:45:00</td>\n",
-       "      <td>45</td>\n",
-       "      <td>131.001416</td>\n",
-       "      <td>3</td>\n",
-       "      <td>North Christopherside</td>\n",
-       "      <td>female</td>\n",
-       "      <td>gmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>997</th>\n",
-       "      <td>998</td>\n",
-       "      <td>49</td>\n",
-       "      <td>1970-01-23 00:10:00</td>\n",
-       "      <td>1986-11-01 04:45:00</td>\n",
-       "      <td>38</td>\n",
-       "      <td>102.663709</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Castroland</td>\n",
-       "      <td>male</td>\n",
-       "      <td>hotmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>999</td>\n",
-       "      <td>61</td>\n",
-       "      <td>2016-02-26 21:04:00</td>\n",
-       "      <td>1952-01-11 10:28:00</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1022.037997</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Salasmouth</td>\n",
-       "      <td>female</td>\n",
-       "      <td>hotmail.com</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>999</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>50</td>\n",
-       "      <td>1982-02-02 07:25:00</td>\n",
-       "      <td>2010-04-24 10:07:00</td>\n",
-       "      <td>30</td>\n",
-       "      <td>333.873768</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Smithstad</td>\n",
        "      <td>female</td>\n",
        "      <td>yahoo.com</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1000 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     user_id  age         signup_date  last_purchase_date  total_purchases  \\\n",
-       "0          1   33 1978-11-01 17:03:00 2020-05-11 04:13:00               10   \n",
-       "1          2   32 2016-04-08 14:19:00 1959-01-07 05:45:00                2   \n",
-       "2          3   19 2021-03-08 07:01:00 2006-10-29 16:56:00                6   \n",
-       "3          4   48 2006-01-11 11:04:00 1966-07-01 20:22:00                8   \n",
-       "4          5   75 1985-06-16 01:41:00 2013-05-14 12:44:00                3   \n",
-       "..       ...  ...                 ...                 ...              ...   \n",
-       "995      996   69 1994-01-02 01:26:00 2002-12-06 01:07:00               48   \n",
-       "996      997   35 1957-10-19 19:41:00 1977-07-19 00:45:00               45   \n",
-       "997      998   49 1970-01-23 00:10:00 1986-11-01 04:45:00               38   \n",
-       "998      999   61 2016-02-26 21:04:00 1952-01-11 10:28:00               12   \n",
-       "999     1000   50 1982-02-02 07:25:00 2010-04-24 10:07:00               30   \n",
+       "   user_id  age         signup_date  last_purchase_date  total_purchases  \\\n",
+       "0        1   33 1978-11-01 17:03:00 2020-05-11 04:13:00               10   \n",
+       "1        2   32 2016-04-08 14:19:00 1959-01-07 05:45:00                2   \n",
+       "2        3   19 2021-03-08 07:01:00 2006-10-29 16:56:00                6   \n",
+       "3        4   48 2006-01-11 11:04:00 1966-07-01 20:22:00                8   \n",
+       "4        5   75 1985-06-16 01:41:00 2013-05-14 12:44:00                3   \n",
        "\n",
-       "     total_spent  favorite_product_category               location  gender  \\\n",
-       "0     840.954993                          1            Lake Gerald  female   \n",
-       "1    1147.412095                          1      North Justinburgh    male   \n",
-       "2    1301.284835                          1              West Alec  female   \n",
-       "3    1404.261405                          1                Annaton    male   \n",
-       "4    1968.752964                          1         East Markburgh  female   \n",
-       "..           ...                        ...                    ...     ...   \n",
-       "995  1395.669474                          2         Cynthiaborough  female   \n",
-       "996   131.001416                          3  North Christopherside  female   \n",
-       "997   102.663709                          3             Castroland    male   \n",
-       "998  1022.037997                          4             Salasmouth  female   \n",
-       "999   333.873768                          4              Smithstad  female   \n",
+       "   total_spent  favorite_product_category           location  gender  \\\n",
+       "0   840.954993                        NaN        Lake Gerald  female   \n",
+       "1  1147.412095                        NaN  North Justinburgh    male   \n",
+       "2  1301.284835                        NaN          West Alec  female   \n",
+       "3  1404.261405                        NaN            Annaton    male   \n",
+       "4  1968.752964                        NaN     East Markburgh  female   \n",
        "\n",
-       "    email_domain  \n",
-       "0      gmail.com  \n",
-       "1      yahoo.com  \n",
-       "2      yahoo.com  \n",
-       "3    hotmail.com  \n",
-       "4      yahoo.com  \n",
-       "..           ...  \n",
-       "995    gmail.com  \n",
-       "996    gmail.com  \n",
-       "997  hotmail.com  \n",
-       "998  hotmail.com  \n",
-       "999    yahoo.com  \n",
-       "\n",
-       "[1000 rows x 10 columns]"
+       "  email_domain  \n",
+       "0    gmail.com  \n",
+       "1    yahoo.com  \n",
+       "2    yahoo.com  \n",
+       "3  hotmail.com  \n",
+       "4    yahoo.com  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,12 +609,12 @@
     "\n",
     "Favorite_product = {'books':1, 'home': 2, 'electronics':3, 'clothing':4,'beauty':5}\n",
     "df['favorite_product_category'] = df['favorite_product_category'].map(Favorite_product)\n",
-    "df"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
