--- a/class_5/notebk.ipynb
+++ b/class_5/notebk.ipynb
@@ -3124,11 +3124,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sepal_length  sepal_width  petal_length  petal_width species\n",
+      "0           5.1          3.5           1.4          0.2  setosa\n",
+      "1           4.9          3.0           1.4          0.2  setosa\n",
+      "2           4.7          3.2           1.3          0.2  setosa\n",
+      "3           4.6          3.1           1.5          0.2  setosa\n",
+      "4           5.0          3.6           1.4          0.2  setosa\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "import seaborn as sns\n",
     "\n",
+    "# Load the iris data set\n",
+    "iris = sns.load_dataset('iris')\n",
+    "\n",
+    "print(iris.head())\n",
     "\n",
     "\n",
     "\n",
@@ -3136,6 +3157,440 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>User ID</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Device Type</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Average Spend</th>\n",
+       "      <th>Average Play Time</th>\n",
+       "      <th>Average Time Watching Ads</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>62</td>\n",
+       "      <td>Device3</td>\n",
+       "      <td>Location3</td>\n",
+       "      <td>54.608937</td>\n",
+       "      <td>0.234102</td>\n",
+       "      <td>2.262157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>65</td>\n",
+       "      <td>Device1</td>\n",
+       "      <td>Location1</td>\n",
+       "      <td>36.428457</td>\n",
+       "      <td>0.802944</td>\n",
+       "      <td>1.440160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Device1</td>\n",
+       "      <td>Location2</td>\n",
+       "      <td>84.843851</td>\n",
+       "      <td>4.349362</td>\n",
+       "      <td>0.374079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Device3</td>\n",
+       "      <td>Location1</td>\n",
+       "      <td>30.963386</td>\n",
+       "      <td>5.966833</td>\n",
+       "      <td>2.430972</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Device3</td>\n",
+       "      <td>Location2</td>\n",
+       "      <td>76.392755</td>\n",
+       "      <td>9.401406</td>\n",
+       "      <td>1.041962</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  User ID  Age Device Type   Location  Average Spend  \\\n",
+       "0           0        1   62     Device3  Location3      54.608937   \n",
+       "1           1        2   65     Device1  Location1      36.428457   \n",
+       "2           2        3   18     Device1  Location2      84.843851   \n",
+       "3           3        4   21     Device3  Location1      30.963386   \n",
+       "4           4        5   21     Device3  Location2      76.392755   \n",
+       "\n",
+       "   Average Play Time  Average Time Watching Ads  \n",
+       "0           0.234102                   2.262157  \n",
+       "1           0.802944                   1.440160  \n",
+       "2           4.349362                   0.374079  \n",
+       "3           5.966833                   2.430972  \n",
+       "4           9.401406                   1.041962  "
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('https://raw.githubusercontent.com/delinai/schulich_ds1/main/Datasets/experiment_demo_dataset.csv')\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>User ID</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Device Type</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Average Spend</th>\n",
+       "      <th>Average Play Time</th>\n",
+       "      <th>Average Time Watching Ads</th>\n",
+       "      <th>Group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>62</td>\n",
+       "      <td>Device3</td>\n",
+       "      <td>Location3</td>\n",
+       "      <td>54.608937</td>\n",
+       "      <td>0.234102</td>\n",
+       "      <td>2.262157</td>\n",
+       "      <td>Control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>65</td>\n",
+       "      <td>Device1</td>\n",
+       "      <td>Location1</td>\n",
+       "      <td>36.428457</td>\n",
+       "      <td>0.802944</td>\n",
+       "      <td>1.440160</td>\n",
+       "      <td>Control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Device1</td>\n",
+       "      <td>Location2</td>\n",
+       "      <td>84.843851</td>\n",
+       "      <td>4.349362</td>\n",
+       "      <td>0.374079</td>\n",
+       "      <td>Variant 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Device3</td>\n",
+       "      <td>Location1</td>\n",
+       "      <td>30.963386</td>\n",
+       "      <td>5.966833</td>\n",
+       "      <td>2.430972</td>\n",
+       "      <td>Control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Device3</td>\n",
+       "      <td>Location2</td>\n",
+       "      <td>76.392755</td>\n",
+       "      <td>9.401406</td>\n",
+       "      <td>1.041962</td>\n",
+       "      <td>Variant 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>995</td>\n",
+       "      <td>996</td>\n",
+       "      <td>54</td>\n",
+       "      <td>Device1</td>\n",
+       "      <td>Location3</td>\n",
+       "      <td>77.823025</td>\n",
+       "      <td>7.265630</td>\n",
+       "      <td>1.881264</td>\n",
+       "      <td>Control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>996</td>\n",
+       "      <td>997</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Device1</td>\n",
+       "      <td>Location3</td>\n",
+       "      <td>27.422427</td>\n",
+       "      <td>9.863676</td>\n",
+       "      <td>1.798216</td>\n",
+       "      <td>Variant 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>997</td>\n",
+       "      <td>998</td>\n",
+       "      <td>47</td>\n",
+       "      <td>Device2</td>\n",
+       "      <td>Location1</td>\n",
+       "      <td>28.934192</td>\n",
+       "      <td>2.449896</td>\n",
+       "      <td>2.218613</td>\n",
+       "      <td>Variant 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>998</td>\n",
+       "      <td>999</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Device1</td>\n",
+       "      <td>Location3</td>\n",
+       "      <td>39.857764</td>\n",
+       "      <td>8.261137</td>\n",
+       "      <td>2.130031</td>\n",
+       "      <td>Variant 1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>999</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Device3</td>\n",
+       "      <td>Location3</td>\n",
+       "      <td>97.084726</td>\n",
+       "      <td>5.968015</td>\n",
+       "      <td>0.744696</td>\n",
+       "      <td>Variant 2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0  User ID  Age Device Type   Location  Average Spend  \\\n",
+       "0             0        1   62     Device3  Location3      54.608937   \n",
+       "1             1        2   65     Device1  Location1      36.428457   \n",
+       "2             2        3   18     Device1  Location2      84.843851   \n",
+       "3             3        4   21     Device3  Location1      30.963386   \n",
+       "4             4        5   21     Device3  Location2      76.392755   \n",
+       "..          ...      ...  ...         ...        ...            ...   \n",
+       "995         995      996   54     Device1  Location3      77.823025   \n",
+       "996         996      997   19     Device1  Location3      27.422427   \n",
+       "997         997      998   47     Device2  Location1      28.934192   \n",
+       "998         998      999   23     Device1  Location3      39.857764   \n",
+       "999         999     1000   34     Device3  Location3      97.084726   \n",
+       "\n",
+       "     Average Play Time  Average Time Watching Ads      Group  \n",
+       "0             0.234102                   2.262157    Control  \n",
+       "1             0.802944                   1.440160    Control  \n",
+       "2             4.349362                   0.374079  Variant 2  \n",
+       "3             5.966833                   2.430972    Control  \n",
+       "4             9.401406                   1.041962  Variant 2  \n",
+       "..                 ...                        ...        ...  \n",
+       "995           7.265630                   1.881264    Control  \n",
+       "996           9.863676                   1.798216  Variant 2  \n",
+       "997           2.449896                   2.218613  Variant 2  \n",
+       "998           8.261137                   2.130031  Variant 1  \n",
+       "999           5.968015                   0.744696  Variant 2  \n",
+       "\n",
+       "[1000 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Randomly assign users to control and variant groups\n",
+    "data['Group'] = np.random.choice(['Control', 'Variant 1', 'Variant 2'], size=len(data))\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Personalized user experiences for Variant Group 1 (age groups)\n",
+    "# You can define age groups based on your specific requirements\n",
+    "age_groups = {\n",
+    "    'Group 1': {'Min Age': 18, 'Max Age': 25},\n",
+    "    'Group 2': {'Min Age': 26, 'Max Age': 35},\n",
+    "    'Group 3': {'Min Age': 36, 'Max Age': np.inf}\n",
+    "}\n",
+    "# Apply personalized experiences based on age group for each user in Variant Group 1\n",
+    "for group, details in age_groups.items():\n",
+    "    age_mask = (data['Age'] >= details['Min Age']) & (data['Age'] <= details['Max Age'])\n",
+    "    data.loc[(data['Group'] == 'Variant 1') & age_mask, 'Experience'] = group\n",
+    "\n",
+    "# Personalized user experiences for Variant Group 2 (device types)\n",
+    "# You can define device types based on your specific requirements\n",
+    "\n",
+    "device_types = ['Device1', 'Device2', 'Device3']\n",
+    "\n",
+    "# Apply personalized experiences based on device type for each user in Variant Group 2\n",
+    "for device_type in device_types:\n",
+    "    device_mask = data['Device Type'] == device_type\n",
+    "    data.loc[(data['Group'] == 'Variant 2') & device_mask, 'Experience'] = device_type\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Collect engagement metric data for each group\n",
+    "control_metrics = data[data['Group'] == 'Control'][['Average Spend', 'Average Play Time', 'Average Time Watching Ads']]\n",
+    "variant1_metrics = data[data['Group'] == 'Variant 1'][['Average Spend', 'Average Play Time', 'Average Time Watching Ads']]\n",
+    "variant2_metrics = data[data['Group'] == 'Variant 2'][['Average Spend', 'Average Play Time', 'Average Time Watching Ads']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comparison of Average Spend:\n",
+      "  F-value: 0.08370771155880179\n",
+      "  p-value: 0.9197064975131783\n",
+      "\n",
+      "Comparison of Average Play Time:\n",
+      "  F-value: 0.30308067851905524\n",
+      "  p-value: 0.7386075300785959\n",
+      "\n",
+      "Comparison of Average Time Watching Ads:\n",
+      "  F-value: 1.4885952567662404\n",
+      "  p-value: 0.22619064170368394\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Perform ANOVA to compare engagement metrics between groups\n",
+    "f_value_sp, p_value_sp = stats.f_oneway(control_metrics['Average Spend'], variant1_metrics['Average Spend'], variant2_metrics['Average Spend'])\n",
+    "f_value_pt, p_value_pt = stats.f_oneway(control_metrics['Average Play Time'], variant1_metrics['Average Play Time'], variant2_metrics['Average Play Time'])\n",
+    "f_value_twa, p_value_twa = stats.f_oneway(control_metrics['Average Time Watching Ads'], variant1_metrics['Average Time Watching Ads'], variant2_metrics['Average Time Watching Ads'])\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"Comparison of Average Spend:\")\n",
+    "print(f\"  F-value: {f_value_sp}\")\n",
+    "print(f\"  p-value: {p_value_sp}\")\n",
+    "\n",
+    "print(\"\\nComparison of Average Play Time:\")\n",
+    "print(f\"  F-value: {f_value_pt}\")\n",
+    "print(f\"  p-value: {p_value_pt}\")\n",
+    "\n",
+    "print(\"\\nComparison of Average Time Watching Ads:\")\n",
+    "print(f\"  F-value: {f_value_twa}\")\n",
+    "print(f\"  p-value: {p_value_twa}\")\n"
    ]
   }
  ],
